src/styles.css
/* ... */
.btn {
  display: inline-block;
  background: var(--light-color);
  color: #333;
  padding: 0.4rem 0.8rem;
  font-size: 1rem;
  border: 2px solid #777;
  cursor: pointer;
  margin-right: 0.5rem;
  -webkit-transition: opacity 0.2s ease-in;
  -o-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
  outline: none;
  border-radius: 3px;
}

.btn-primary,
.bg-primary {
  background: var(--primary-color);
  color: #fff;
}

.btn-light,
.bg-light {
  background: var(--light-color);
  color: #333;
}

.btn-dark,
.bg-dark {
  background: var(--dark-color);
  color: #fff;
}

.btn-white,
.bg-white,
.badge-white,
.alert-white {
  background: #f7f7f7;
  color: #333;
  border: #777 solid 2px;
  border-radius: 3px;
}

.btn:hover {
  opacity: 0.8;
}

.bg-light {
  border: #777 solid 2px;
}

.round-img {
  border-radius: 50%;
  border: 5px solid #eee;
  z-index: 1;
}

.line {
  height: 1px;
  background: #ccc;
  margin: 1.5rem 0;
}

/* Navbar */
.navbar {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  padding: 0.7rem 2rem;
  z-index: 1;
  width: 100%;
  top: 0;
  border-bottom: solid 3px var(--primary-color);
  z-index: 10;
  transition: all 0.3s ease;
}

.navbar ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.navbar a {
  color: #fff;
  padding: 0.45rem;
  margin: 0 0.25rem;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

/* Navbar colors */
.reactColor {
  color: #61dbfb;
}
.vueColor {
  color: #41b883;
}
.angularColor {
  color: #b52e31;
}
/* Colors are of the top frameworks*/

.navbar a:hover {
  color: var(--hover-color);
}

.navbar .welcome span {
  margin-right: 0.6rem;
}

/* Project Section*/
.projectsHeader {
  text-align: center;
  font-size: 3rem;
  padding: 15px;
  margin: 0 10px;
  border-bottom: 3px solid #003b6f;
}

#img {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 2rem 1fr;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 2rem;
  text-align: center;
  margin: 2rem 1rem;
}

.img {
  margin-bottom: 1rem;
}

.img img {
  -webkit-transition: all 1s ease;
  -o-transition: all 1s ease;
  transition: all 0.5s ease;
  width: 90%;
  margin-bottom: 1rem;
  border: 2px solid #1d1d1d;
}

.img a {
  padding: 3px;
  text-decoration: none;
  color: #003b6f;
  -webkit-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.3s ease;
}

.p-border {
  border-bottom: 2px solid var(--primary-color);
  width: 90%;
  margin: auto;
}

/* About Section*/
.about {
  background: #eee;
  min-height: 85vh;
  border-top: 5px solid var(--primary-color);
}

.about-inner {
  margin: auto;
  width: 80%;
}
.about-lead {
  font-size: 1.5rem;
  text-align: center;
}

.border-bottom {
  border-bottom: 2px solid var(--primary-color);
  transition: all 0.3s ease;
}

/* Profiles Page */
.profile {
  position: relative;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 2fr 2rem 4fr 2rem 2fr;
  grid-template-columns: 2fr 4fr 2fr;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-gap: 2rem;
  padding: 1rem;
  line-height: 1.8;
  margin-bottom: 1rem;
}

/* Profile Page */
.profile-grid {
  display: -ms-grid;
  display: grid;
  grid-template-areas:
    "top top"
    "about about"
    "exp edu"
    "github github";
  grid-gap: 1rem;
}

.profile-top,
.about-top,
.projects-top {
  grid-row: 1;
  grid-column: 1;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 3;
  position: relative;
  margin-top: 4rem;
  grid-area: top;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  text-align: center;
  background: var(--primary-color);
  color: #f7f7f7;
  background: url("./img/flw-banner.PNG") no-repeat center center/cover;
  padding: 1rem;
  min-height: 300px;
}

.about-top,
.projects-top {
  height: 200px;
}

.profile-top::after,
.about-top::after,
.projects-top::after {
  content: "";
  background: rgb(0, 0, 0);
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0.1) 0%,
    rgba(0, 0, 0, 0.75) 50%,
    rgba(0, 0, 0, 1) 100%
  );
  position: absolute;
  width: 100%;
  height: 100%;
}

.profile-info {
  z-index: 1;
}

.profile-top img {
  width: 250px;
}

.profile-top .icons a {
  color: #fff;
  margin: 0 0.3rem;
}

.profile-top .icons a:hover {
  color: var(--dark-color);
}

.profile-about {
  grid-row: 3;
  grid-column: 1;
  -ms-grid-row: 3;
  -ms-grid-column: 1;
  -ms-grid-column-span: 3;
  grid-area: about;
  text-align: center;
}

.profile-about .skills {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
}

.profile-exp {
  grid-row: 5;
  grid-column: 1;
  -ms-grid-row: 5;
  -ms-grid-column: 1;
  grid-area: exp;
}

.profile-edu {
  grid-row: 5;
  grid-column: 3;
  -ms-grid-row: 5;
  -ms-grid-column: 3;
  grid-area: edu;
}

.profile-exp h2,
.profile-edu h2 {
  margin-bottom: 1rem;
  border-bottom: 2px solid var(--primary-color);
}

.profile-exp > div,
.profile-edu > div {
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  border-bottom: #777 2px solid;
}

.profile-exp > div:last-child,
.profile-edu > div:last-child {
  border: 0;
}

.profile-exp p,
.profile-edu p {
  margin: 0.5rem 0;
}
/* ... */

